--- a/Hotel-Booking/src/index.css
+++ b/Hotel-Booking/src/index.css
@@ -2,6 +2,13 @@
 
 @import "tailwindcss";
 
+
+@theme{
+  --color-primary:#2563Eb;
+  --color-secondary: #FBBF24;
+}
+
+
 *{
 
   font-family: Outfit;
